create a logout process

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,4 +1,6 @@
 login.label=Login
-login.error=Zły użytkownik lub hasło
+login.error=Błąd!!! Zły użytkownik lub hasło!
+login.logout=Wylogój
+login.loggedOut=Zostałeś wylogowany
 
 about.label=O aplikacji
