add english language version

--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -1,6 +1,6 @@
-login.label=Login
+login.label=Zaloguj się
 login.error=Błąd!!! Zły użytkownik lub hasło!
-login.logout=Wylogój
+login.logout=Wyloguj się
 login.loggedOut=Zostałeś wylogowany
 
 about.label=O aplikacji
