footer fragment - improve

--- a/src/main/resources/languages/messages.properties
+++ b/src/main/resources/languages/messages.properties
@@ -2,5 +2,9 @@ login.label=Log in
 login.error=Error!!! Wrong username or password!
 login.logout=Log out
 login.loggedOut=You are logged out
+login.signUp=Sign up
 
 about.label=About app
+index.label=Index
+index.main.title=WSB University
+index.main.button=Learn more
