--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -1,6 +1,26 @@
 login.label=Zaloguj się
+login.user=Podaj użytkownika
+login.password=Podaj hasło
+login.confirm=Zatwierdź
 login.error=Błąd!!! Zły użytkownik lub hasło!
 login.logout=Wyloguj się
 login.loggedOut=Zostałeś wylogowany
+login.signUp=Rejestracja
 
 about.label=O aplikacji
+about.content=Bugtracker to narzędzie, którego zadaniem jest usprawnienie pracy\
+  \ zespołu ludzi nad jednym projektem. ...
+index.label=Index
+
+layout.main.title=Wyższa Szkoła Bankowa
+layout.main.content=Bugtracker służy do organizacji\
+  \ i śledzenia postępu prac członków zespołu nad określonym projektem.\
+  \ Została stworzona na potrzeby zaliczenia\
+  \ studiów podyplomowych, na kierunku "Programista Java Developer".
+layout.main.button=Czytaj więcej
+
+footer.content=Applikacja stworzona w 2021r. przez Pawła Zajączkowskiego (studenta WSB w Gdańsku).\
+  \ Pomysłodawcą i twórcą modelu projektu jest grupa wykładowców związana z firmą Logintegra.\
+  \ Niezbędne wsparcie merytoryczne zapewnił Paweł Staniszewski - promotor pracy.
+
+text.test=Menu1 
