add link in i18n file

--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -22,5 +22,8 @@ layout.main.button=Czytaj więcej
 footer.content=Applikacja stworzona w 2021r. przez Pawła Zajączkowskiego (studenta WSB w Gdańsku).\
   \ Pomysłodawcą i twórcą modelu projektu jest grupa wykładowców związana z firmą Logintegra.\
   \ Niezbędne wsparcie merytoryczne zapewnił Paweł Staniszewski - promotor pracy.
+footer.github=<a href="https://github.com/pzdev2/bug-tracker">GitHub</a> projektu.
 
-text.test=Menu1 
+menu.issue=Zadania
+menu.project=Projekty
+menu.user=Użytkownicy
