add a layout page for authenticated users

--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -1,3 +1,5 @@
+app.title=PZ Bugtracker
+
 login.label=Zaloguj się
 login.user=Podaj użytkownika
 login.password=Podaj hasło
@@ -7,10 +9,8 @@ login.logout=Wyloguj się
 login.loggedOut=Zostałeś wylogowany
 login.signUp=Rejestracja
 
-about.label=O aplikacji
 about.content=Bugtracker to narzędzie, którego zadaniem jest usprawnienie pracy\
   \ zespołu ludzi nad jednym projektem. ...
-index.label=Index
 
 layout.main.title=Wyższa Szkoła Bankowa
 layout.main.content=Bugtracker służy do organizacji\
@@ -19,11 +19,14 @@ layout.main.content=Bugtracker służy do organizacji\
   \ studiów podyplomowych, na kierunku "Programista Java Developer".
 layout.main.button=Czytaj więcej
 
-footer.content=Applikacja stworzona w 2021r. przez Pawła Zajączkowskiego (studenta WSB w Gdańsku).\
-  \ Pomysłodawcą i twórcą modelu projektu jest grupa wykładowców związana z firmą Logintegra.\
+footer.content=Aplikacja stworzona w 2021r. przez Pawła Zajączkowskiego (studenta\
+  \ <a href="https://www.wsb.pl/">WSB</a> w Gdańsku).\
+  \ Pomysłodawcą i twórcą modelu projektu jest grupa wykładowców związana z firmą\
+  \ <a href="https://logintegra.com/">Logintegra</a>.\
   \ Niezbędne wsparcie merytoryczne zapewnił Paweł Staniszewski - promotor pracy.
 footer.github=<a href="https://github.com/pzdev2/bug-tracker">GitHub</a> projektu.
 
-menu.issue=Zadania
-menu.project=Projekty
-menu.user=Użytkownicy
+layout.menu.issues=Zadania
+layout.menu.projects=Projekty
+layout.menu.users=Użytkownicy
+layout.menu.user.settings=Ustawienia
