--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -1,4 +1,4 @@
-app.title=PZ Bugtracker
+app.title=Bugtracker
 
 login.label=Zaloguj się
 login.user=Podaj użytkownika
@@ -30,3 +30,11 @@ layout.menu.issues=Zadania
 layout.menu.projects=Projekty
 layout.menu.users=Użytkownicy
 layout.menu.user.settings=Ustawienia
+
+person.login=Nazwa użytkownika
+person.user_real_name=Imię i nazwisko
+person.phone_number=Numer telefonu
+person.email=Adres e-mail
+person.add=Dodaj użytkownika
+person.remove=Usuń
+person.edit=Edytuj
