--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -1,9 +1,9 @@
 app.title=Bugtracker
+btn.confirm=Zatwierdź
 
 login.label=Zaloguj się
 login.user=Podaj użytkownika
 login.password=Podaj hasło
-login.confirm=Zatwierdź
 login.error=Błąd!!! Zły użytkownik lub hasło!
 login.logout=Wyloguj się
 login.loggedOut=Zostałeś wylogowany
@@ -35,6 +35,12 @@ person.login=Nazwa użytkownika
 person.user_real_name=Imię i nazwisko
 person.phone_number=Numer telefonu
 person.email=Adres e-mail
-person.add=Dodaj użytkownika
 person.remove=Usuń
 person.edit=Edytuj
+
+person.add.label=Wpisz dane nowego użytkownika
+person.add.user_real_name=Wpisz imię i nazwisko
+person.add.login=Wpisz nazwę użytkownika
+person.add.password=Wpisz hasło
+person.add.email=Wpisz adres e-mail
+person.add.phone_number=Wpisz numer telefonu
