edit and update a user

--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -44,3 +44,10 @@ person.add.login=Wpisz nazwę użytkownika
 person.add.password=Wpisz hasło
 person.add.email=Wpisz adres e-mail
 person.add.phone_number=Wpisz numer telefonu
+
+person.update.label=Szczegóły użytkownika
+person.update.user_real_name=Nazwa użytkownika
+person.update.login=Login użytkownika
+person.update.password=Hasło
+person.update.email=Adres e-mail
+person.update.phone_number=Numer telefonu
