--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -9,21 +9,20 @@ login.logout=Wyloguj się
 login.loggedOut=Zostałeś wylogowany
 login.signUp=Rejestracja
 
-about.content=Bugtracker to narzędzie, którego zadaniem jest usprawnienie pracy\
-  \ zespołu ludzi nad jednym projektem. ...
-
 layout.main.title=Wyższa Szkoła Bankowa
 layout.main.content=Bugtracker służy do organizacji\
   \ i śledzenia postępu prac członków zespołu nad określonym projektem.\
-  \ Została stworzona na potrzeby zaliczenia\
+  \ Został stworzony na potrzeby zaliczenia\
   \ studiów podyplomowych, na kierunku "Programista Java Developer".
 layout.main.button=Czytaj więcej
 
-footer.content=Aplikacja stworzona w 2021r. przez Pawła Zajączkowskiego (studenta\
-  \ <a href="https://www.wsb.pl/">WSB</a> w Gdańsku).\
-  \ Pomysłodawcą i twórcą modelu projektu jest grupa wykładowców związana z firmą\
-  \ <a href="https://logintegra.com/">Logintegra</a>.\
-  \ Niezbędne wsparcie merytoryczne zapewnił Paweł Staniszewski - promotor pracy.
+about.content=Bugtracker został stworzony w 2021r. przez Pawła Zajączkowskiego (studenta\
+  \ <a href="https://www.wsb.pl/">WSB</a> w Gdańsku). Pomysłodawcą i twórcą modelu projektu\
+  \ jest grupa wykładowców związana z firmą <a href="https://logintegra.com/">Logintegra</a>.\
+  \ Niezbędne wsparcie merytoryczne zapewnił Paweł Staniszewski - promotor pracy. Aplikacja\
+  \ służy do organizacji pracy grupy osób pracujących nad jednym projektem. Ułatwia komunikacje,\
+  \ wykrywanie i naprawianie błędów oraz odpowiednie rozłożenie prac na poszczególnych członków zespołu.
+
 footer.github=<a href="https://github.com/pzdev2/bug-tracker">GitHub</a> projektu.
 
 layout.menu.issues=Zadania
