show and save auth list

--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -41,8 +41,10 @@ person.add.label=Wpisz dane nowego użytkownika
 person.add.user_real_name=Wpisz imię i nazwisko
 person.add.login=Wpisz nazwę użytkownika
 person.add.password=Wpisz hasło
+person.add.re-password=Ponownie wpisz hasło
 person.add.email=Wpisz adres e-mail
 person.add.phone_number=Wpisz numer telefonu
+person.add.btn.confirm=Dodaj
 
 person.update.label=Szczegóły użytkownika
 person.update.user_real_name=Nazwa użytkownika
@@ -50,3 +52,13 @@ person.update.login=Login użytkownika
 person.update.password=Hasło
 person.update.email=Adres e-mail
 person.update.phone_number=Numer telefonu
+person.update.btn.confirm=Zmień
+
+nav.issues=Lista zgłoszeń
+
+authority.ROLE_USERS_TAB=Dostęp do listy użytkowników
+authority.ROLE_MANAGE_USERS=Zarządzanie użytkownikami
+authority.ROLE_MANAGE_PROJECT=Zarządzanie projektami
+authority.ROLE_MANAGE_COMMENTS=Administracja komentarzami
+
+ValidPasswords.person.repeatedPassword = Hasła nie są zgodne
