add project to the database

--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -62,3 +62,8 @@ authority.ROLE_MANAGE_PROJECT=Zarządzanie projektami
 authority.ROLE_MANAGE_COMMENTS=Administracja komentarzami
 
 ValidPasswords.person.repeatedPassword = Hasła nie są zgodne
+
+project.add.label=Dodaj nowy projekt
+project.add.name=Nazwa projektu
+project.add.code=Kod projektu
+project.add.description=Opis projektu
