save project in database - add view

--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -1,5 +1,6 @@
 app.title=Bugtracker
 btn.confirm=Zatwierdź
+btn.add=Dodaj
 
 login.label=Zaloguj się
 login.user=Podaj użytkownika
@@ -44,7 +45,6 @@ person.add.password=Wpisz hasło
 person.add.re-password=Ponownie wpisz hasło
 person.add.email=Wpisz adres e-mail
 person.add.phone_number=Wpisz numer telefonu
-person.add.btn.confirm=Dodaj
 
 person.update.label=Szczegóły użytkownika
 person.update.user_real_name=Nazwa użytkownika
