adding a new issue

--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -61,9 +61,37 @@ authority.ROLE_MANAGE_USERS=Zarządzanie użytkownikami
 authority.ROLE_MANAGE_PROJECT=Zarządzanie projektami
 authority.ROLE_MANAGE_COMMENTS=Administracja komentarzami
 
+priority.TRIVIAL=Może czekać
+priority.LOW=Mało ważne
+priority.MEDIUM=Nie może długo czekać
+priority.HIGH=Do zrobienia w pierwszej kolejności
+priority.URGENT=Pilne!!! Zostaw wszystko i wpierw zrób to!
+
+status.PENDING=Oczekujące
+status.WORKING=W toku
+status.REJECTED=Odrzucone
+status.STACK=Utkneło
+status.DONE=Zrobione
+status.TESTING=W fazie testów
+status.ACCEPTED=Zatwierdzone i zamknięte
+
+type.FEATURE=Funkcjonalność
+type.BUG=Do naprawy
+type.CHORE=Rutynowe
+
 ValidPasswords.person.repeatedPassword = Hasła nie są zgodne
+
+project.name=Nazwa projektu
 
 project.add.label=Dodaj nowy projekt
 project.add.name=Nazwa projektu
 project.add.code=Kod projektu
 project.add.description=Opis projektu
+
+issue.add.project=Wybierz projekt
+issue.add.creator=Manager zadania
+issue.add.assigne=Wyznacz pracownika do wykonania zadania
+issue.add.label=Dodaj zadanie
+issue.add.name=Wpisz nazwe zadania
+issue.add.description=Dodaj opis zadania
+issue.add.code=Wpisz kod zadania
