--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -1,5 +1,6 @@
 app.title=Bugtracker
 btn.confirm=Zatwierdź
+btn.cancel=Anuluj
 btn.add=Dodaj
 
 login.label=Zaloguj się
@@ -38,21 +39,13 @@ person.email=Adres e-mail
 person.remove=Usuń
 person.edit=Edytuj
 
-person.add.label=Wpisz dane nowego użytkownika
-person.add.user_real_name=Wpisz imię i nazwisko
-person.add.login=Wpisz nazwę użytkownika
-person.add.password=Wpisz hasło
-person.add.re-password=Ponownie wpisz hasło
-person.add.email=Wpisz adres e-mail
-person.add.phone_number=Wpisz numer telefonu
-
-person.update.label=Szczegóły użytkownika
-person.update.user_real_name=Nazwa użytkownika
-person.update.login=Login użytkownika
-person.update.password=Hasło
-person.update.email=Adres e-mail
-person.update.phone_number=Numer telefonu
-person.update.btn.confirm=Zmień
+person.add.label=Dodaj/Edytuj użytkownika
+person.add.user_real_name=Nazwa użytkownika
+person.add.login=Login użytkownika
+person.add.password=Hasło
+person.add.re-password=Powtórz hasło
+person.add.email=Adres e-mail
+person.add.phone_number=Numer telefonu
 
 nav.issues=Lista zgłoszeń
 
