rebase issue controller

--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -91,6 +91,17 @@ project.add.name=Nazwa projektu
 project.add.code=Kod projektu
 project.add.description=Opis projektu
 
+issue.name=Nazwa zadania
+issue.description=Opis zadania
+issue.code=Kod zadania
+issue.project=Nazwa Projektu
+issue.creator=Osoba wyznaczająca
+issue.assignee=Osoba przydzielona do zadania
+issue.dateCreated=Data utworzenia
+issue.close=Zamknij
+issue.edit=Edytuj
+
+
 issue.add.project=Wybierz projekt
 issue.add.assigne=Wyznacz pracownika do wykonania zadania
 issue.add.label=Dodaj zadanie
