improve validation on add person page

--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -46,6 +46,15 @@ person.add.password=Hasło
 person.add.re-password=Powtórz hasło
 person.add.email=Adres e-mail
 person.add.phone_number=Numer telefonu
+person.add.placeholder=To pole jest opcjonalne
+
+Size.person.userRealName=Nazwa użytkownika musi zawierać minimum 5 znaków.
+NotEmpty.person.userRealName=Pole wymagane! Nie może być puste.
+NotEmpty.person.password=Pole wymagane! Wprowadź hasło.
+NotEmpty.person.login=Pole wymagane! Wprowadź login.
+ValidPasswords.person.password=Błąd przy wprowadzaniu hasła.
+Size.person.password=Hasło musi mieć conajmniej 8 znaków.
+Size.person.login=Login musi zawierać minimum 5 znaków.
 
 nav.issues=Lista zgłoszeń
 
