--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -55,6 +55,7 @@ NotEmpty.person.login=Pole wymagane! Wprowadź login.
 ValidPasswords.person.password=Błąd przy wprowadzaniu hasła.
 Size.person.password=Hasło musi mieć conajmniej 8 znaków.
 Size.person.login=Login musi zawierać minimum 5 znaków.
+Email.person.email=Popraw adres e-mail.
 
 nav.issues=Lista zgłoszeń
 
