--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -91,16 +91,18 @@ project.add.name=Nazwa projektu
 project.add.code=Kod projektu
 project.add.description=Opis projektu
 
-issue.name=Nazwa zadania
-issue.description=Opis zadania
-issue.code=Kod zadania
-issue.project=Nazwa Projektu
+issue.name=Tytół
+issue.description=Opis
+issue.code=Kod
+issue.project=Projekt
 issue.creator=Osoba wyznaczająca
-issue.assignee=Osoba przydzielona do zadania
+issue.assignee=Wykonawca
+issue.status=Status
+issue.priority=Priorytet
+issue.type=Typ
 issue.dateCreated=Data utworzenia
 issue.close=Zamknij
 issue.edit=Edytuj
-
 
 issue.add.project=Wybierz projekt
 issue.add.assigne=Wyznacz pracownika do wykonania zadania
@@ -108,3 +110,5 @@ issue.add.label=Dodaj zadanie
 issue.add.name=Wpisz nazwe zadania
 issue.add.description=Dodaj opis zadania
 issue.add.code=Wpisz kod zadania
+
+globalSearch.placeholder=Szukaj
