--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -92,11 +92,8 @@ project.add.code=Kod projektu
 project.add.description=Opis projektu
 
 issue.name=Tytół
-issue.description=Opis
 issue.code=Kod
 issue.project=Projekt
-issue.creator=Osoba wyznaczająca
-issue.assignee=Wykonawca
 issue.status=Status
 issue.priority=Priorytet
 issue.type=Typ
@@ -104,11 +101,15 @@ issue.dateCreated=Data utworzenia
 issue.close=Zamknij
 issue.edit=Edytuj
 
+issue.filter.search=Wpisz szukaną frazę z pola tytół lub kod
+issue.filter.project=Wybierz projekt
+issue.filter.status=Wybierz status
+issue.filter.priority=Wybierz priorytet
+issue.filter.type=Wybierz typ
+
 issue.add.project=Wybierz projekt
 issue.add.assigne=Wyznacz pracownika do wykonania zadania
 issue.add.label=Dodaj zadanie
 issue.add.name=Wpisz nazwe zadania
 issue.add.description=Dodaj opis zadania
 issue.add.code=Wpisz kod zadania
-
-globalSearch.placeholder=Szukaj
