add validations on the issue add page

--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -57,6 +57,13 @@ Size.person.password=Hasło musi mieć conajmniej 8 znaków.
 Size.person.login=Login musi zawierać minimum 5 znaków.
 Email.person.email=Popraw adres e-mail.
 
+NotEmpty.issue.code=Pole wymagane! Wpisz kod zadania.
+NotNull.issue.project=Wybierz projekt.
+NotEmpty.issue.name=Pole wymagane! Wpisz tytół zadania.
+NotNull.issue.assignee=Wybierz wykonawce.
+Size.issue.code=Kod zbyt długi. Musi mieć mniej niż 20 znaków.
+Size.issue.name=Tytół zbyt długi. Musi mieć mniej niż 100 znaków.
+
 nav.issues=Lista zgłoszeń
 
 authority.ROLE_USERS_TAB=Dostęp do listy użytkowników
@@ -109,7 +116,7 @@ issue.filter.type=Wybierz typ
 
 issue.add.project=Wybierz projekt
 issue.add.assigne=Wyznacz pracownika do wykonania zadania
-issue.add.label=Dodaj zadanie
+issue.add.label=Dodaj/Modyfikuj Zadanie
 issue.add.name=Wpisz nazwe zadania
 issue.add.description=Dodaj opis zadania
 issue.add.code=Wpisz kod zadania
