improve view of the issue list

--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -74,8 +74,8 @@ authority.ROLE_MANAGE_COMMENTS=Administracja komentarzami
 priority.TRIVIAL=Może czekać
 priority.LOW=Mało ważne
 priority.MEDIUM=Nie może długo czekać
-priority.HIGH=Do zrobienia w pierwszej kolejności
-priority.URGENT=Pilne!!! Zostaw wszystko i wpierw zrób to!
+priority.HIGH=Do zrobienia już
+priority.URGENT=Pilne!!!
 
 status.PENDING=Oczekujące
 status.WORKING=W toku
@@ -83,7 +83,7 @@ status.REJECTED=Odrzucone
 status.STACK=Utkneło
 status.DONE=Zrobione
 status.TESTING=W fazie testów
-status.ACCEPTED=Zatwierdzone i zamknięte
+status.ACCEPTED=Zamknięte
 
 type.FEATURE=Funkcjonalność
 type.BUG=Do naprawy
