--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -39,7 +39,7 @@ person.email=Adres e-mail
 person.remove=Usuń
 person.edit=Edytuj
 
-person.add.label=Dodaj/Edytuj użytkownika
+person.add.label=Dodaj/Modyfikuj użytkownika
 person.add.user_real_name=Nazwa użytkownika
 person.add.login=Login użytkownika
 person.add.password=Hasło
@@ -63,6 +63,9 @@ NotEmpty.issue.name=Pole wymagane! Wpisz tytół zadania.
 NotNull.issue.assignee=Wybierz wykonawce.
 Size.issue.code=Kod zbyt długi. Musi mieć mniej niż 20 znaków.
 Size.issue.name=Tytół zbyt długi. Musi mieć mniej niż 100 znaków.
+
+NotEmpty.project.name=Pole wymagane! Wpisz nazwe projektu.
+NotEmpty.project.code=Pole wymagane! Wpisz kod projektu.
 
 nav.issues=Lista zgłoszeń
 
@@ -93,7 +96,7 @@ ValidPasswords.person.repeatedPassword = Hasła nie są zgodne
 
 project.name=Nazwa projektu
 
-project.add.label=Dodaj nowy projekt
+project.add.label=Dodaj/Modyfikuj projekt
 project.add.name=Nazwa projektu
 project.add.code=Kod projektu
 project.add.description=Opis projektu
@@ -116,7 +119,7 @@ issue.filter.type=Wybierz typ
 
 issue.add.project=Wybierz projekt
 issue.add.assigne=Wyznacz pracownika do wykonania zadania
-issue.add.label=Dodaj/Modyfikuj Zadanie
+issue.add.label=Dodaj/Modyfikuj zadanie
 issue.add.name=Wpisz nazwe zadania
 issue.add.description=Dodaj opis zadania
 issue.add.code=Wpisz kod zadania
