show projects list

--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -1,7 +1,10 @@
 app.title=Bugtracker
 btn.confirm=Zatwierdź
 btn.cancel=Anuluj
+btn.close=Zamknij
 btn.add=Dodaj
+btn.remove=Usuń
+btn.edit=Edytuj
 
 login.label=Zaloguj się
 login.user=Podaj użytkownika
@@ -36,8 +39,6 @@ person.login=Nazwa użytkownika
 person.user_real_name=Imię i nazwisko
 person.phone_number=Numer telefonu
 person.email=Adres e-mail
-person.remove=Usuń
-person.edit=Edytuj
 
 person.add.label=Dodaj/Modyfikuj użytkownika
 person.add.user_real_name=Nazwa użytkownika
@@ -95,6 +96,9 @@ type.CHORE=Rutynowe
 ValidPasswords.person.repeatedPassword = Hasła nie są zgodne
 
 project.name=Nazwa projektu
+project.code=Kod projektu
+project.description=Opis projektu
+project.date-created=Data utworzenia projektu
 
 project.add.label=Dodaj/Modyfikuj projekt
 project.add.name=Nazwa projektu
@@ -108,8 +112,6 @@ issue.status=Status
 issue.priority=Priorytet
 issue.type=Typ
 issue.dateCreated=Data utworzenia
-issue.close=Zamknij
-issue.edit=Edytuj
 
 issue.filter.search=Wpisz szukaną frazę z pola tytół lub kod
 issue.filter.project=Wybierz projekt
