add user settings

--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -40,7 +40,9 @@ person.user_real_name=Imię i nazwisko
 person.phone_number=Numer telefonu
 person.email=Adres e-mail
 
-person.add.label=Dodaj/Modyfikuj użytkownika
+person.settings.title=Ustawienia użytkownika
+person.edit.title=Edytuj użytkownika
+person.add.title=Dodaj użytkownika
 person.add.user_real_name=Nazwa użytkownika
 person.add.login=Login użytkownika
 person.add.password=Hasło
@@ -49,7 +51,7 @@ person.add.email=Adres e-mail
 person.add.phone_number=Numer telefonu
 person.add.placeholder=To pole jest opcjonalne
 
-Size.person.userRealName=Nazwa użytkownika musi zawierać minimum 5 znaków.
+Size.person.userRealName=Nazwa użytkownika musi zawierać conajmniej 4 znaki.
 NotEmpty.person.userRealName=Pole wymagane! Nie może być puste.
 NotEmpty.person.password=Pole wymagane! Wprowadź hasło.
 NotEmpty.person.login=Pole wymagane! Wprowadź login.
