conditions in the add page title

--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -102,7 +102,8 @@ project.code=Kod projektu
 project.description=Opis projektu
 project.date-created=Data utworzenia projektu
 
-project.add.label=Dodaj/Modyfikuj projekt
+project.add.title=Dodaj projekt
+project.edit.title=Edytuj projekt
 project.add.name=Nazwa projektu
 project.add.code=Kod projektu
 project.add.description=Opis projektu
