conditions in the add issue page title

--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -122,9 +122,10 @@ issue.filter.status=Wybierz status
 issue.filter.priority=Wybierz priorytet
 issue.filter.type=Wybierz typ
 
+issue.add.title=Dodaj zadanie
+issue.edit.title=Edytuj zadanie
 issue.add.project=Wybierz projekt
 issue.add.assigne=Wyznacz pracownika do wykonania zadania
-issue.add.label=Dodaj/Modyfikuj zadanie
 issue.add.name=Wpisz nazwe zadania
 issue.add.description=Dodaj opis zadania
 issue.add.code=Wpisz kod zadania
