add assignee to the issue list

--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -111,6 +111,7 @@ project.add.description=Opis projektu
 issue.name=Tytół
 issue.code=Kod
 issue.project=Projekt
+issue.assignee=Wykonawca
 issue.status=Status
 issue.priority=Priorytet
 issue.type=Typ
