change input text to textarea

--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -128,6 +128,6 @@ issue.add.title=Dodaj zadanie
 issue.edit.title=Edytuj zadanie
 issue.add.project=Wybierz projekt
 issue.add.assignee=Wyznacz pracownika do wykonania zadania
-issue.add.name=Wpisz nazwe zadania
-issue.add.description=Dodaj opis zadania
-issue.add.code=Wpisz kod zadania
+issue.add.name=Nazwa zadania
+issue.add.description=Opis zadania
+issue.add.code=Kod zadania
