improve the appearance 'issue/add.html' page

--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -131,3 +131,6 @@ issue.add.assignee=Wyznacz pracownika do wykonania zadania
 issue.add.name=Nazwa zadania
 issue.add.description=Opis zadania
 issue.add.code=Kod zadania
+issue.add.priority=Priorytet zadania:
+issue.add.status=Status zadania:
+issue.add.type=Typ zadania:
