improve the appearance 'issue/issues.html' page

--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -118,11 +118,11 @@ issue.type=Typ
 issue.dateCreated=Data utworzenia
 
 issue.filter.search=Wpisz szukaną frazę z pola tytół lub kod
-issue.filter.project=Wyszukaj po projekcie
-issue.filter.assignee=Wyszukaj po wykonawcy
-issue.filter.status=Wyszukaj po statusie
-issue.filter.priority=Wyszukaj po priorytecie
-issue.filter.type=Wyszukaj po typie
+issue.filter.project=Filtruj po projekcie
+issue.filter.assignee=Filtruj po wykonawcy
+issue.filter.status=Filtruj po statusie
+issue.filter.priority=Filtruj po priorytecie
+issue.filter.type=Filtruj po typie
 
 issue.add.title=Dodaj zadanie
 issue.edit.title=Edytuj zadanie
