add clean filter feature

--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -2,9 +2,9 @@ app.title=Bugtracker
 btn.confirm=Zatwierdź
 btn.cancel=Anuluj
 btn.close=Zamknij
-btn.add=Dodaj
 btn.remove=Usuń
 btn.edit=Edytuj
+btn.filter.remove=Czyść filtry
 
 login.label=Zaloguj się
 login.user=Podaj użytkownika
