improve appearance radios in the issue form

--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -117,7 +117,7 @@ issue.priority=Priorytet
 issue.type=Typ
 issue.dateCreated=Data utworzenia
 
-issue.filter.search=Wpisz szukaną frazę z pola tytół lub kod
+issue.filter.search=Wpisz szukaną fraze
 issue.filter.project=Filtruj po projekcie
 issue.filter.assignee=Filtruj po wykonawcy
 issue.filter.status=Filtruj po statusie
