--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -4,6 +4,7 @@ btn.cancel=Anuluj
 btn.close=Zamknij
 btn.remove=Usuń
 btn.edit=Edytuj
+btn.password=Zmień hasło
 btn.filter.remove=Czyść filtry
 
 login.label=Zaloguj się
@@ -12,7 +13,6 @@ login.password=Podaj hasło
 login.error=Błąd!!! Zły użytkownik lub hasło!
 login.logout=Wyloguj się
 login.loggedOut=Zostałeś wylogowany
-login.signUp=Rejestracja
 
 layout.main.title=Wyższa Szkoła Bankowa
 layout.main.content=Bugtracker służy do organizacji\
@@ -42,6 +42,7 @@ person.email=Adres e-mail
 
 person.settings.title=Ustawienia użytkownika
 person.edit.title=Edytuj użytkownika
+person.edit.password=Zmień hasło
 person.add.title=Dodaj użytkownika
 person.add.user_real_name=Nazwa użytkownika
 person.add.login=Login użytkownika
