display an error messages in the user edit form

--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -61,6 +61,16 @@ Size.person.password=Hasło musi mieć conajmniej 8 znaków.
 Size.person.login=Login musi zawierać minimum 5 znaków.
 Email.person.email=Popraw adres e-mail.
 
+Size.ediPerson.userRealName=Nazwa użytkownika musi zawierać conajmniej 4 znaki.
+NotEmpty.editPerson.userRealName=Pole wymagane! Nie może być puste.
+NotEmpty.editPerson.login=Pole wymagane! Wprowadź login.
+Size.editPerson.login=Login musi zawierać minimum 5 znaków.
+Email.editPerson.email=Popraw adres e-mail.
+
+NotEmpty.editPassword.password=Pole wymagane! Wprowadź hasło.
+ValidPasswords.editPassword.password=Błąd przy wprowadzaniu hasła.
+Size.editPassword.password=Hasło musi mieć conajmniej 8 znaków.
+
 NotEmpty.issue.code=Pole wymagane! Wpisz kod zadania.
 NotNull.issue.project=Wybierz projekt.
 NotEmpty.issue.name=Pole wymagane! Wpisz tytół zadania.
