improve password change validation

--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -56,10 +56,11 @@ Size.person.userRealName=Nazwa użytkownika musi zawierać conajmniej 4 znaki.
 NotEmpty.person.userRealName=Pole wymagane! Nie może być puste.
 NotEmpty.person.password=Pole wymagane! Wprowadź hasło.
 NotEmpty.person.login=Pole wymagane! Wprowadź login.
-ValidPasswords.person.password=Błąd przy wprowadzaniu hasła.
 Size.person.password=Hasło musi mieć conajmniej 8 znaków.
 Size.person.login=Login musi zawierać minimum 5 znaków.
 Email.person.email=Popraw adres e-mail.
+ValidPasswords.person.password=Błąd przy wprowadzaniu hasła.
+ValidPasswords.person.repeatedPassword = Hasła nie są zgodne.
 
 Size.ediPerson.userRealName=Nazwa użytkownika musi zawierać conajmniej 4 znaki.
 NotEmpty.editPerson.userRealName=Pole wymagane! Nie może być puste.
@@ -67,9 +68,9 @@ NotEmpty.editPerson.login=Pole wymagane! Wprowadź login.
 Size.editPerson.login=Login musi zawierać minimum 5 znaków.
 Email.editPerson.email=Popraw adres e-mail.
 
-NotEmpty.editPassword.password=Pole wymagane! Wprowadź hasło.
-ValidPasswords.editPassword.password=Błąd przy wprowadzaniu hasła.
+ValidEditPasswords.editPassword.password=Błąd przy wprowadzaniu hasła.
 Size.editPassword.password=Hasło musi mieć conajmniej 8 znaków.
+ValidEditPasswords.editPassword.repeatedPassword=Hasła nie są zgodne.
 
 NotEmpty.issue.code=Pole wymagane! Wpisz kod zadania.
 NotNull.issue.project=Wybierz projekt.
@@ -105,8 +106,6 @@ status.ACCEPTED=Zamknięte
 type.FEATURE=Funkcjonalność
 type.BUG=Do naprawy
 type.CHORE=Rutynowe
-
-ValidPasswords.person.repeatedPassword = Hasła nie są zgodne
 
 project.name=Nazwa projektu
 project.code=Kod projektu
