improve login uniqueness validation

--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -58,17 +58,16 @@ NotEmpty.person.password=Pole wymagane! Wprowadź hasło.
 NotEmpty.person.login=Pole wymagane! Wprowadź login.
 Size.person.password=Hasło musi mieć conajmniej 8 znaków.
 Size.person.login=Login musi zawierać minimum 5 znaków.
+UniqueLogin.person.login=Login nie jest unikatowy! Zmień login na inny.
 Email.person.email=Popraw adres e-mail.
 ValidPasswords.person.password=Błąd przy wprowadzaniu hasła.
 ValidPasswords.person.repeatedPassword = Hasła nie są zgodne.
 
-Size.ediPerson.userRealName=Nazwa użytkownika musi zawierać conajmniej 4 znaki.
-NotEmpty.editPerson.userRealName=Pole wymagane! Nie może być puste.
-NotEmpty.editPerson.login=Pole wymagane! Wprowadź login.
+Size.editPerson.userRealName=Nazwa użytkownika musi zawierać conajmniej 4 znaki.
 Size.editPerson.login=Login musi zawierać minimum 5 znaków.
+UniqueLogin.editPerson.login=Login nie jest unikatowy! Zmień login na inny.
 Email.editPerson.email=Popraw adres e-mail.
 
-ValidEditPasswords.editPassword.password=Błąd przy wprowadzaniu hasła.
 Size.editPassword.password=Hasło musi mieć conajmniej 8 znaków.
 ValidEditPasswords.editPassword.repeatedPassword=Hasła nie są zgodne.
 
