--- a/src/main/resources/languages/messages_pl.properties
+++ b/src/main/resources/languages/messages_pl.properties
@@ -53,9 +53,6 @@ person.add.phone_number=Numer telefonu
 person.add.placeholder=To pole jest opcjonalne
 
 Size.person.userRealName=Nazwa użytkownika musi zawierać conajmniej 4 znaki.
-NotEmpty.person.userRealName=Pole wymagane! Nie może być puste.
-NotEmpty.person.password=Pole wymagane! Wprowadź hasło.
-NotEmpty.person.login=Pole wymagane! Wprowadź login.
 Size.person.password=Hasło musi mieć conajmniej 8 znaków.
 Size.person.login=Login musi zawierać minimum 5 znaków.
 UniqueLogin.person.login=Login nie jest unikatowy! Zmień login na inny.
@@ -69,7 +66,7 @@ UniqueLogin.editPerson.login=Login nie jest unikatowy! Zmień login na inny.
 Email.editPerson.email=Popraw adres e-mail.
 
 Size.editPassword.password=Hasło musi mieć conajmniej 8 znaków.
-ValidEditPasswords.editPassword.repeatedPassword=Hasła nie są zgodne.
+ValidPasswords.editPassword.repeatedPassword=Hasła nie są zgodne.
 
 NotEmpty.issue.code=Pole wymagane! Wpisz kod zadania.
 NotNull.issue.project=Wybierz projekt.
